# Generative-Ai-Portfolio-Project

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  serve.py
app/: config.py  main.py
app/core/: embeddings.py  llm.py  vector_store.py
app/models/: schemas.py
app/services/: document_processor.py  rag_chain.py
app/static/: index.html
data/documents/: ai_basics.txt  ml_concepts.txt  rag_explanation.txt
scripts/: demo_queries.py
tests/: test_rag.py
